MH-6136 updated init and start scripts to work with 3.0